# HVAC-Lead

./: .gitignore  README.md
backend/: .env.example  graph.py  llm.py  main.py  models.py  poll_leads.py  pyproject.toml  requirements.txt  test_gemini.py
backend/config/: settings.py
backend/graph/: chat.py  prompts.py  workflow.py
backend/nodes/: logger.py  nurture.py  prepare.py  scorer.py  updater.py
backend/schemas/: chat.py  lead.py  score.py  state.py
backend/scripts/: test_gemini_models.py
backend/services/: google_sheets_mock.py  nurture.py  poller.py  sheets.py
backend/store/: lead_cache.py
backend/tests/: test_sheets.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  LeadForm.tsx
